# vault

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/skills/impl-status/: SKILL.md
.claude/skills/parser-test/: SKILL.md
.claude/skills/schema-check/: SKILL.md
.github/workflows/: ci.yml
docs/: embeddings.md  olympus-vault-plan.md  plan-review-2026-06-11.md  runbook.md  security.md  vault-context.md  vault-plan.md
src/: config.rs  main.rs  types.rs
src/configure/: mod.rs  vault.toml.template
src/diagnose/: mod.rs
src/embed/: mod.rs  stub.rs  tei.rs
src/hook/: log.rs  mod.rs
src/index/: mod.rs  secrets.rs  sync.rs  walk.rs
src/index/classify/: gemma.rs  haiku.rs  mod.rs  openai_compat.rs  stub.rs
src/parse/: go_source.rs  markdown.rs  mod.rs  openapi.rs  proto.rs  rust_source.rs
src/retrieve/: budget.rs  hybrid.rs  mod.rs
src/retrieve/router/: gemma.rs  haiku.rs  mod.rs  openai_compat.rs  prompts.rs  stub.rs
src/store/: mod.rs  postgresql_store.rs  query.rs  schema.rs  sqlite_store.rs  traits.rs  types.rs
src/tei/: launcher.rs  mod.rs
src/util/: fs.rs  json.rs  mod.rs  path.rs  probe.rs
